--- a/siteInstitucional/src/css/styleCadastro.css
+++ b/siteInstitucional/src/css/styleCadastro.css
@@ -41,6 +41,7 @@ section {
     height: 600px;
     border-radius: 12px;
     background-color: var(--branco);
+    box-shadow: 0px 0px 40px 10px rgba(0,0,0,0.15);
 }
 
 .img-cad{
