--- a/siteInstitucional/src/css/stylePokemon.css
+++ b/siteInstitucional/src/css/stylePokemon.css
@@ -124,25 +124,15 @@ li:hover {
 .btn-azul:hover{
     background-color: var(--azulEscuro);
 }
-/* 
-.linha {
-    width: 100%;
-    position: absolute;
-    z-index: 999;
-}
-
-.linha hr {
-    border: 2px solid var(--roxo);
-} */
 
 .banner {
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     width: 100%;
-    background-image: url("../img/pokemonWall.jpg");
+    background-image: url("../img/pokemon/bannerPokemon.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -150,6 +140,85 @@ li:hover {
 .banner-cont {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
+}
+
+.banner-cont h1 {
+    font-size: 50px;
+    color: var(--branco);
+    text-shadow: 3px 0px 3px var(--roxo);
+}
+
+.fotos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.grid-fotos {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-auto-rows: auto auto;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
+}
+
+.box {
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease-in;
+}
+
+.box:hover {
+    transform: scale(1.05);
+}
+
+.box img {
+    border-radius: 12px;
+    box-shadow: 0px 0px 12px 1px rgba(159, 159, 191, 1);
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.infos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.grid-infos {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-auto-rows: auto;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
+}
+
+.parte-1 {
+    width: 100%;
+    height: 90vh;
+}
+
+.logon {
+    width: 100%;
+    height: 100%;
+    background-image: url("../../src/img/pokemon/squirtle.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.parte-2 {
+    width: 100%;
+    height: 90vh;
+    background-color: #BF307F;
 }
