--- a/siteInstitucional/src/css/styleHomepage.css
+++ b/siteInstitucional/src/css/styleHomepage.css
@@ -16,12 +16,23 @@
     --branco: #FFFFFF;
     --brancoCinza: #f2f2f2;
     --cinza: #b2b2b2;
+    --transparente: #ffffff00;
 }
 
 html {
     font-family: "Rubik", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--transparente);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--roxo);
 }
 
 .container {
@@ -72,12 +83,12 @@ header {
     align-items: center;
 }
 
-a {
+.itens-header a {
     color: var(--roxo);
     font-size: 1.5rem;
 }
 
-a:hover {
+.itens-header a:hover {
     color: var(--rosaEscuro);
 }
 
@@ -362,6 +373,11 @@ li:hover {
     width: 100%;
 }
 
+.grids a {
+    width: 100%;
+    height: 100%;
+}
+
 .port-card {
     display: flex;
     width: 100%;
@@ -371,38 +387,10 @@ li:hover {
     border-radius: 12px;
     transition: all 0.5s ease-out;
     cursor: pointer;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .port-card:hover {
     transform: scale(1.05);
-}
-
-.img-minecraft {
-    background-image: url(../img/minecraft.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.img-valorant {
-    background-image: url(../img/vava.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.img-brawl {
-    background-image: url(../img/brawlhalla.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.img-pokemon {
-    background-image: url(../img/pokemon.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.img-rocket {
-    background-image: url(../img/rocketleague.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
 }
