--- a/public/css/styleEditarPerfil.css
+++ b/public/css/styleEditarPerfil.css
@@ -40,13 +40,13 @@ html {
 .editar-perfil {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 140vh;
     flex-direction: row;
 }
 
 .menu-lateral {
     width: 20vw;
-    height: 100vh;
+    height: 140vh;
     background-color: var(--rosaNeon);
 }
 
@@ -127,6 +127,7 @@ li:active {
     flex-wrap: wrap;
     padding: 1rem;
     gap: 1rem;
+    height: 75vh;
 }
 
 .escolha-foto h1 {
@@ -142,8 +143,8 @@ li:active {
 }
 
 .img {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     background-position: center;
     background-size: cover;
@@ -154,4 +155,28 @@ li:active {
 
 .img:hover {
     transform: scale(1.05);
+}
+
+.graficos {
+    width: 100%;
+    height: 65vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: #731F4D;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.grafico-1 {
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background-color: #FFFFFF;
+}
+
+.grafico-2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background-color: #FFFFFF;
 }
