Foto de Perfil e Login funcionando

--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -44,6 +44,12 @@ nav {
     align-items: center;
 }
 
+.formulario {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
 .login {
     display: flex;
     gap: 1rem;
