--- a/public/css/styleEditarPerfil.css
+++ b/public/css/styleEditarPerfil.css
@@ -68,10 +68,14 @@ html {
     align-items: center;
 }
 
-.user .img {
+.imgPerfil {
     width: 70px;
     height: 70px;
-    cursor: auto;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: all 0.5s ease-in-out;
 }
 
 .user h1 {
