--- a/public/css/styleForum.css
+++ b/public/css/styleForum.css
@@ -236,8 +236,7 @@ li:hover {
     height: 80%;
 }
 
-.comentarios .icon {
-    background-color: #024873;
+.icon {
     border-radius: 50%;
     height: 30px;
     width: 32px;
@@ -246,6 +245,29 @@ li:hover {
     text-align: center;
     justify-content: center;
     align-items: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.icon-user {
+    height: 30px;
+    width: 32px;
+    color: white;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.form-forum {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 
 .forum-publicacao {
@@ -350,4 +372,14 @@ li:hover {
     align-items: center;
     justify-content: start;
     gap: 1rem;
+}
+
+.content {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+}
+
+.content .tema {
+    font-weight: bold;
 }
