--- a/public/css/styleForum.css
+++ b/public/css/styleForum.css
@@ -214,6 +214,75 @@ li:hover {
     background-color: var(--branco);
     box-shadow: 0px 0px 20px -8px rgba(35, 35, 57, 1);
     border-radius: 12px;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.forum-info h2 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.user-mais-ativos {
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+}
+
+.assunto-do-momento {
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+}
+
+.assunto-do-momento h2 {
+    color: var(--rosaEscuro);
+}
+
+.user-mais-ativos h2 {
+    color: var(--azulEscuro);
+}
+
+.align-user {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.align-user p {
+    font-size: 20px;
+}
+
+.users-lin {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.users-lin hr{
+    width: 100%;
+    border: solid 1px rgb(190, 190, 190);
+}
+
+.users-perfil {
+    display: flex;
+    flex-direction: row;
+    gap: 0.4rem;
+    align-items: center;
+}
+
+.align-jogo {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.align-jogo p {
+    font-size: 20px;
 }
 
 .forum-publicar {
@@ -371,7 +440,7 @@ li:hover {
     flex-direction: row;
     align-items: center;
     justify-content: start;
-    gap: 1rem;
+    gap: 0.4rem;
 }
 
 .content {
