--- a/public/css/styleEditarPerfil.css
+++ b/public/css/styleEditarPerfil.css
@@ -131,7 +131,7 @@ li:active {
     flex-wrap: wrap;
     padding: 1rem;
     gap: 1rem;
-    height: 75vh;
+    height: 60vh;
 }
 
 .escolha-foto h1 {
@@ -161,13 +161,66 @@ li:active {
     transform: scale(1.05);
 }
 
-.graficos {
+.info-grafico {
     width: 100%;
-    height: 65vh;
+    height: 20vh;
+    background-color: #1f2773;
+}
+
+.kpis {
+    width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 0.5rem;
+    gap: 1rem;
+}
+
+.kpi {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--branco);
+    border-radius: 12px;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.kpi h1 {
+    font-size: 44px;
+    color: var(--roxo);
+}
+
+.kpi h2 {
+    font-size: 12px;
+    color: var(--azulEscuro);
+}
+
+
+.dashboard {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 60vh;
     background-color: #731F4D;
     padding: 1rem;
+    gap: 1rem;
+}
+
+.title-graficos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    padding-left: 0.5rem;
+    gap: 1rem;
+    color: var(--roxo);
+    font-size: 20px;
+}
+
+.graficos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    height: 90%;
     gap: 1rem;
 }
 
@@ -176,6 +229,9 @@ li:active {
     height: 100%;
     border-radius: 12px;
     background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .grafico-2 {
@@ -183,4 +239,26 @@ li:active {
     height: 100%;
     border-radius: 12px;
     background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.fundoGrafico {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 90%;
+}
+
+#graficoBarra {
+    width: 100%;
+    height: 100%;
+}
+
+#graficoDoughut {
+    width: 100%;
+    height: 100%;
+}
+
