Dashboard funcional 100% e Iframe

--- a/public/css/styleHomepage.css
+++ b/public/css/styleHomepage.css
@@ -321,11 +321,12 @@ li:hover {
 .emocao-itens {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100%;
     padding: 2.5rem;
+    gap: 3rem;
 }
 
 .emocao-title {
@@ -353,11 +354,10 @@ li:hover {
 .conheca-mais-itens {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     align-items: center;
     height: 90vh;
     width: 100%;
-    gap: 2rem;
+    gap: 3rem;
 }
 
 .conheca-mais-title {
