--- a/public/css/styleEditarPerfil.css
+++ b/public/css/styleEditarPerfil.css
@@ -56,7 +56,7 @@ html {
 
 .perfil {
     width: 80vw;
-    height: 100vh;
+    height: 140vh;
 }
 
 .user {
@@ -164,7 +164,6 @@ li:active {
 .info-grafico {
     width: 100%;
     height: 20vh;
-    background-color: #1f2773;
 }
 
 .kpis {
@@ -180,15 +179,77 @@ li:active {
     display: flex;
     flex-direction: column;
     background-color: var(--branco);
+    box-shadow: 0px 0px 20px -8px rgba(35, 35, 57, 1);
     border-radius: 12px;
     padding: 1rem;
     gap: 1rem;
+}
+
+.info-div {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+}
+
+.modal-info {
+    visibility: hidden;
+    width: 150px;
+    height: 60px;
+    left: -30%;
+    top: 60%;
+    border-radius: 12px;
+    transform: translateX(-50%);
+    position: absolute;
+    background-color: var(--roxo);
+    transition: all 0.5s ease-in-out;
+    padding: 0.7rem;
+    opacity: 0;
+}
+
+.modal-info::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 85%;
+    transform: translateY(-25%);
+    border: 13px solid;
+    border-radius: 2px;
+    border-color: #0000 #0000 var(--roxo) #0000;
+}
+
+.ihover {
+    cursor: pointer;
+    transition: all 0.5s;
+    display: inline-block; 
+    position: relative;
+}
+
+.ihover:hover {
+    color: var(--azulEscuro);
+}
+
+.ihover:hover .modal-info{
+    visibility: visible;
+    opacity: 1;
+}
+
+.align-star {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+}
+
+.star-yellow {
+    color: var(--amarelo);
 }
 
 .kpi h1 {
     font-size: 44px;
     color: var(--roxo);
 }
+
 
 .kpi h2 {
     font-size: 12px;
@@ -201,7 +262,6 @@ li:active {
     flex-direction: column;
     width: 100%;
     height: 60vh;
-    background-color: #731F4D;
     padding: 1rem;
     gap: 1rem;
 }
@@ -232,6 +292,7 @@ li:active {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 0px 20px -8px rgba(35, 35, 57, 1);
 }
 
 .grafico-2 {
@@ -242,6 +303,7 @@ li:active {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 0px 20px -8px rgba(35, 35, 57, 1);
 }
 
 .fundoGrafico {
