--- a/public/css/styleHomepage.css
+++ b/public/css/styleHomepage.css
@@ -284,6 +284,20 @@ li:hover {
     border-radius: 100%;
     background-color: var(--branco);
     box-shadow: 0px 0px 12px 1px rgba(46, 1, 46, 0.469);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-round {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .p-card{
