--- a/public/css/styleJogos.css
+++ b/public/css/styleJogos.css
@@ -378,9 +378,16 @@ li:hover {
 }
 
 .box-info .info-text {
+    padding: 2rem;
     width: 100%;
     border-radius: 12px;
     box-shadow: 0px 0px 12px 1px var(--roxoClaroShadow);
+    text-align: justify;
+}
+
+.box-info .info-text h1 {
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .footer{
